--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@koa/cors": "^2.2.1",
+    "@types/koa-static-cache": "^5.1.0",
     "class-validator": "^0.9.1",
     "dotenv": "^6.0.0",
     "koa": "^2.5.1",
@@ -64,6 +65,7 @@
     "koa-helmet": "^4.0.0",
     "koa-jwt": "^3.3.2",
     "koa-router": "^7.4.0",
+    "koa-static-cache": "^5.1.2",
     "pg": "^7.4.3",
     "pg-connection-string": "^2.0.0",
     "reflect-metadata": "^0.1.12",
