--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@koa/cors": "^2.2.1",
     "@types/koa-static-cache": "^5.1.0",
     "class-validator": "^0.9.1",
+    "crypto": "^1.0.1",
     "dotenv": "^6.0.0",
     "koa": "^2.5.1",
     "koa-body": "^4.1.0",
@@ -66,6 +67,7 @@
     "koa-jwt": "^3.3.2",
     "koa-router": "^7.4.0",
     "koa-static-cache": "^5.1.2",
+    "moment": "^2.24.0",
     "pg": "^7.4.3",
     "pg-connection-string": "^2.0.0",
     "reflect-metadata": "^0.1.12",
